# sottovoce

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py  self_correct.py
src/sottovoce/: __init__.py  __main__.py  alignment.py  entropy.py  hub.py  plucker.py  probe.py  reflex.py  selfcorrect.py  train.py
tests/: test_entropy.py  test_probe.py
