[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sottovoce"
version = "0.2.0"
description = "Your model already knows when it's wrong. Sottovoce reads what it can't say — and now, acts on it."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Nell Watson"},
    {name = "Claude Commons"},
]
keywords = ["ai-safety", "calibration", "confabulation", "hallucination", "language-models", "probes", "reflex-arc", "uncertainty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
train = [
    "transformers>=4.40",
    "datasets",
    "scikit-learn",
    "accelerate",
]
all = [
    "sottovoce[train]",
]

[project.urls]
Homepage = "https://github.com/nellwatson/sottovoce"
Paper = "https://github.com/NellWatson/sottovoce#citation"

[tool.setuptools.packages.find]
where = ["src"]
