[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sottovoce"
version = "0.3.1"
description = "Residual-stream confabulation detection and self-correction for language models."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Nell Watson"},
    {name = "Claude Commons"},
]
keywords = ["ai-safety", "calibration", "confabulation", "hallucination", "language-models", "probes", "self-correction", "uncertainty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
train = [
    "transformers>=4.40",
    "datasets",
    "scikit-learn",
    "accelerate",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "scikit-learn",
]
all = [
    "sottovoce[train,dev]",
]

[project.scripts]
sottovoce-train = "sottovoce.train:main"

[project.urls]
Homepage = "https://github.com/NellWatson/sottovoce"
Repository = "https://github.com/NellWatson/sottovoce"
Issues = "https://github.com/NellWatson/sottovoce/issues"
Changelog = "https://github.com/NellWatson/sottovoce/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
